# zod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_pt  LICENSE  README.md  devkit_tutorial.ipynb  pyproject.toml  requirements.txt
.github/workflows/: github-actions-demo.yml  publish.yml
examples/: devkit_tutorial.ipynb  zod_intro.ipynb
examples/d2_od/: README  predict.py  train_slurm.sh  train_slurm_2gpu.sh
examples/fiftyone-visualization/: config.yaml  demo.ipynb  requirements.txt  utils.py  zod_to_fiftyone.py
examples/fiftyone-visualization/src/: config.yaml  utils.py  zod_to_fiftyone.py
examples/object-detection/detectron2/: train.py  visualize.py
examples/object-detection/yolov7/: README.md
examples/traffic-sign-classification/: README.md
scripts/: compensate_clouds.py  create_ego_motion.py  create_info.py  create_sequence_ego_motion.py  create_sequence_info.py  hal_cpu copy.sh  hal_gpu.sh  vis_cloud.py
tests/: test_parse_annotations.py  test_run_tutorial.py
zod/: __init__.py  _zod_dataset.py  constants.py  main.py  zod_drives.py  zod_frames.py  zod_sequences.py
zod/anno/: ego_road.py  lane.py  object.py  parser.py  road_condition.py
zod/anno/tsr/: class_map.py  traffic_sign.py
zod/cli/: download.py  download_zod.py  dropbox_download.py  extract_tsr_patches.py  generate_coco_json.py  main.py  torrent_download.py  utils.py  verify.py  visualize_lidar.py
zod/data_classes/: __init__.py  box.py  calibration.py  ego_motion.py  frame.py  geometry.py  info.py  objects.py  oxts.py  sensor.py  sequence.py  vehicle_data.py
zod/dataclasses/: __init__.py  frame.py  info.py  metadata.py  oxts.py  sequence.py  zod_dataclasses.py
zod/eval/: README.md  tsr.py
zod/eval/detection/: __init__.py  constants.py  eval_nuscenes_style.py  evaluate.py  matching.py  utils.py
zod/eval/detection/_experimental/: eval.py  matching.py  utils.py
zod/eval/detection/_nuscenes_eval/: changes.txt
zod/eval/detection/_nuscenes_eval/common/: data_classes.py  utils.py
zod/eval/detection/_nuscenes_eval/detection/: algo.py  constants.py  data_classes.py
zod/eval/detection/nuscenes_eval/common/: utils.py
zod/eval/detection/nuscenes_eval/detection/: algo.py  constants.py
zod/frames/: annotation_parser.py  frame.py  generate_coco_json.py  info.py  zod_frames.py
zod/frames/evaluation/object_detection/: evaluate.py  matching.py  utils.py
zod/frames/evaluation/object_detection/nuscenes_eval/: LICENCE.txt
zod/frames/evaluation/object_detection/nuscenes_eval/common/: utils.py
zod/frames/evaluation/object_detection/nuscenes_eval/detection/: algo.py  data_classes.py
zod/frames/traffic_sign_classification/: README.md  prepare_classification_dataset.py
zod/sequences/: info.py  sequence.py  zod_sequence.py  zod_sequences.py
zod/sequences/dds_parsers/: radar_parser.py  satellite_parser.py  target_tracking_parser.py
zod/utils/: annotation_parser.py  compensation.py  download_zod.py  geometry.py  metadata.py  objects.py  oxts.py  polygon_transformations.py  utils.py  visualization.py  zod_dataclasses.py
zod/visualization/: bev_utils.py  colorlabeler.py  ego_road_visualization.py  lane_markings_visualization.py  lidar_3d.py  lidar_bev.py  lidar_on_image.py  object_visualization.py  oxts_on_image.py  oxts_visualization.py  polygon_utils.py
zod/zod_dataclasses/: __init__.py  calibration.py  frame.py  info.py  metadata.py  objects.py  oxts.py  sensor.py  sequence.py  zod_dataclasses.py
