[tool.poetry]
name = "zod"
version = "0.6.1"
description = "Zenseact Open Dataset"
authors = ["Zenseact <opendataset@zenseact.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://zod.zenseact.com"
repository = "https://github.com/zenseact/zod"

[tool.poetry.scripts]
zod = "zod.cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = ">=4.60"
numpy = "^1.19"
scipy = "^1.5"
pillow = ">=7"
h5py = ">=3.1"
pyquaternion = ">=0.9"
numpy-quaternion = ">=2022.4.2"
dataclass-wizard = ">=0.22.2"
# Optional dependencies
typer = { extras = ["all"], version = ">=0.7.0", optional = true }
dropbox = { version = ">=11.36.0", optional = true }
opencv-python = { version = "^4", optional = true }
matplotlib = { version = "^3", optional = true }
plotly = { version = "^5", optional = true }
dash-bootstrap-components = { version = "^1.1", optional = true }
pandas = { version = "^1.3", optional = true }
notebook = { version = ">=5", optional = true }
imageio = { version = "^2", optional = true }

[tool.poetry.extras]
cli = ["typer", "dropbox"]
all = [
    "typer",
    "dropbox",
    "opencv-python",
    "matplotlib",
    "plotly",
    "dash-bootstrap-components",
    "pandas",
    "notebook",
    "imageio",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = ">=2"
pytest = ">=7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["zod/eval/detection/_nuscenes_eval/*"]

[tool.ruff.lint]
select = [  # (see here: https://github.com/charliermarsh/ruff#supported-rules)
    "I", # isort
    "W", # warning
    "E", # pycodestyle
]
