[project]
name = "zod"
version = "0.7"
description = "Zenseact Open Dataset"
authors = [{ name = "Zenseact", email = "opendataset@zenseact.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "tqdm>=4.60",
    "numpy>=1.19",
    "scipy>=1.5",
    "pillow>=7",
    "h5py>=3.1",
    "pyquaternion>=0.9",
    "numpy-quaternion>=2022.4.2",
    "dataclass-wizard>=0.22,!=0.31,!=0.32", #https://github.com/rnag/dataclass-wizard/issues/159
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.15.0",
    "dropbox>=11.36.0",
]
all = [
    "typer[all]>=0.15.0",
    "dropbox>=11.36.0",
    "opencv-python>=4,<5",
    "matplotlib>=3,<4",
    "plotly>=5,<6",
    "dash-bootstrap-components~=1.1",
    "pandas~=1.3",
    "notebook>=5",
    "imageio>=2,<3",
]

[project.urls]
Homepage = "https://zod.zenseact.com"
Repository = "https://github.com/zenseact/zod"

[project.scripts]
zod = "zod.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pre-commit>=3",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = ["zod/eval/detection/_nuscenes_eval/*"]

[tool.ruff.lint]
select = [  # (see here: https://github.com/charliermarsh/ruff#supported-rules)
    "I", # isort
    "W", # warning
    "E", # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "I001"]